nambah buat step bar

--- a/index.html
+++ b/index.html
@@ -5,82 +5,115 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.min.css" />
-    <script src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <title>Document</title>
 </head>
 <body>
     <div class="container"> 
-        <div class="row">
+        <div class="row mt-3">
             <div class="col">
-                <h1>tes col 1</h1>
-                <div class="card" style="width: 18rem;">
-                    <!-- <img class="card-img-top" src=".../100px180/" alt="Card image cap"> -->
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                <!-- <h1>tes col 1</h1> -->
+                <div class="card offset-md-1" style="width: 18rem; height: 16rem;">
+                        <div class="card-header">
+                            Application
                         </div>
+                    <!-- <img class="card-img-top" src=".../100px180/" alt="Card image cap"> -->
+                        <a href="application.html" class="card-body" style="background: wheat">
+                        <div>
+                            <!-- <h5 class="card-title">Card title</h5> -->
+                            <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+                            <!-- <a href="#" class="btn btn-primary card-bottom">Go somewhere</a> -->
+                        </div>
+                        </a>
                 </div>
             </div>
             <div class="col">
-                <h1>tes col 1</h1>
-                <div class="card" style="width: 18rem;">
-                    <!-- <img class="card-img-top" src=".../100px180/" alt="Card image cap"> -->
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                <!-- <h1>tes col 1</h1> -->
+                <div class="card offset-md-1" style="width: 18rem; height: 16rem;">
+                        <div class="card-header">
+                            Marketing
                         </div>
+                    <!-- <img class="card-img-top" src=".../100px180/" alt="Card image cap"> -->
+                        <a href="#" class="card-body" style="background: wheat">
+                        <div>
+                            <!-- <h5 class="card-title">Card title</h5> -->
+                            <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+                            <!-- <a href="#" class="btn btn-primary card-bottom">Go somewhere</a> -->
+                        </div>
+                        </a>
                 </div>
             </div>
             <div class="col">
-                <h1>tes col 1</h1>
-                <div class="card" style="width: 18rem;">
-                    <!-- <img class="card-img-top" src=".../100px180/" alt="Card image cap"> -->
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                <!-- <h1>tes col 1</h1> -->
+                <div class="card offset-md-1" style="width: 18rem; height: 16rem;">
+                        <div class="card-header">
+                            Application
                         </div>
+                    <!-- <img class="card-img-top" src=".../100px180/" alt="Card image cap"> -->
+                        <a href="#" class="card-body" style="background: wheat">
+                        <div>
+                            <!-- <h5 class="card-title">Card title</h5> -->
+                            <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+                            <!-- <a href="#" class="btn btn-primary card-bottom">Go somewhere</a> -->
+                        </div>
+                        </a>
                 </div>
             </div>
         </div>
 
-        <div class="row">
+        <div class="row mt-3">
                 <div class="col">
-                    <h1>tes col 2</h1>
-                    <div class="card" style="width: 18rem;">
-                        <!-- <img class="card-img-top" src=".../100px180/" alt="Card image cap"> -->
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <!-- <h1>tes col 2</h1> -->
+                    <div class="card offset-md-1" style="width: 18rem; height: 16rem;">
+                            <div class="card-header">
+                                Application
                             </div>
+                        <!-- <img class="card-img-top" src=".../100px180/" alt="Card image cap"> -->
+                            <a href="#" class="card-body" style="background: wheat">
+                            <div>
+                                <!-- <h5 class="card-title">Card title</h5> -->
+                                <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+                                <!-- <a href="#" class="btn btn-primary card-bottom">Go somewhere</a> -->
+                            </div>
+                            </a>
                     </div>
                 </div>
                 <div class="col">
-                    <h1>tes col 2</h1>
-                    <div class="card" style="width: 18rem;">
-                        <!-- <img class="card-img-top" src=".../100px180/" alt="Card image cap"> -->
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <!-- <h1>tes col 2</h1> -->
+                    <div class="card offset-md-1" style="width: 18rem; height: 16rem;">
+                            <div class="card-header">
+                                Application
                             </div>
+                        <!-- <img class="card-img-top" src=".../100px180/" alt="Card image cap"> -->
+                            <a href="#" class="card-body" style="background: wheat">
+                            <div>
+                                <!-- <h5 class="card-title">Card title</h5> -->
+                                <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+                                <!-- <a href="#" class="btn btn-primary card-bottom">Go somewhere</a> -->
+                            </div>
+                            </a>
                     </div>
                 </div>
                 <div class="col">
-                    <h1>tes col 2</h1>
-                    <div class="card" style="width: 18rem;">
-                        <!-- <img class="card-img-top" src=".../100px180/" alt="Card image cap"> -->
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <!-- <h1>tes col 2</h1> -->
+                    <div class="card offset-md-1" style="width: 18rem; height: 16rem;">
+                            <div class="card-header">
+                                Application
                             </div>
+                        <!-- <img class="card-img-top" src=".../100px180/" alt="Card image cap"> -->
+                            <a href="#" class="card-body" style="background: wheat">
+                            <div>
+                                <!-- <h5 class="card-title">Card title</h5> -->
+                                <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+                                <!-- <a href="#" class="btn btn-primary card-bottom">Go somewhere</a> -->
+                            </div>
+                            </a>
                     </div>
                 </div>
             </div>
     </div>
+
+
+    <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
